# versionize_derive

./: CHANGELOG.md  Cargo.toml  README.md  coverage_config_aarch64.json  coverage_config_x86_64.json
src/: common.rs  helpers.rs  lib.rs
src/descriptors/: enum_desc.rs  struct_desc.rs  union_desc.rs
src/fields/: enum_variant.rs  struct_field.rs  union_field.rs
